// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accuracyPct": 8.225,
  "atk": 45,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 10.25,
  "critMult": 2.36,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 147,
  "healMult": 1.0975000000000001,
  "hp": 395,
  "intStat": 15,
  "magicAtk": 33,
  "magicDef": 7,
  "maxHp": 395,
  "maxMp": 80,
  "minDamage": 2,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 294,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accuracyPct": 1.775,
  "atk": 8,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 3,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1399999999999997,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 15,
  "healMult": 1.0975000000000001,
  "hp": 170,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 170,
  "maxMp": 80,
  "minDamage": 3,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accuracyPct": 4.685,
  "atk": 13,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1199999999999997,
  "critResistPct": 4.5,
  "def": 6,
  "evasionPct": 2.7,
  "extraAttackChancePct": 14.5,
  "healMult": 1.1725,
  "hp": 395,
  "intStat": 148,
  "magicAtk": 33,
  "magicDef": 14,
  "maxHp": 395,
  "maxMp": 354,
  "minDamage": 9,
  "mp": 354,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": true,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 29,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accuracyPct": 3.8249999999999997,
  "atk": 23,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 7,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 21.25,
  "critMult": 2.84,
  "critResistPct": 1.5,
  "def": 6,
  "evasionPct": 16.8,
  "extraAttackChancePct": 59.5,
  "healMult": 1.0975000000000001,
  "hp": 395,
  "intStat": 15,
  "magicAtk": 18,
  "magicDef": 7,
  "maxHp": 395,
  "maxMp": 80,
  "minDamage": 2,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 119,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accuracyPct": 2.175,
  "atk": 11,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 11,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.1799999999999997,
  "critResistPct": 1.5,
  "def": 25,
  "evasionPct": 3.7,
  "extraAttackChancePct": 15,
  "healMult": 1.7175000000000002,
  "hp": 550,
  "intStat": 15,
  "magicAtk": 7,
  "magicDef": 7,
  "maxHp": 550,
  "maxMp": 80,
  "minDamage": 10,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 30,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accuracyPct": 4.234999999999999,
  "atk": 39,
  "attackCount": 1,
  "baselineRegen": {
    "amount": 8,
    "interval": 5,
  },
  "classTier": undefined,
  "critChancePct": 2.25,
  "critMult": 2.3859999999999997,
  "critResistPct": 1.5,
  "def": 13,
  "evasionPct": 3.7,
  "extraAttackChancePct": 13.5,
  "healMult": 1.2575,
  "hp": 435,
  "intStat": 15,
  "magicAtk": 19,
  "magicDef": 7,
  "maxHp": 435,
  "maxMp": 80,
  "minDamage": 17,
  "mp": 80,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveMagicBasicAttack": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 27,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "b9e7d3cff6f410d014019e2a5f1e23f74f565c8c",
    "outcome": "win",
    "playerHp": 435,
    "playerMp": 80,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "5120e8496a8afe9241a5b1e230b0089264660d0a",
    "outcome": "win",
    "playerHp": 427,
    "playerMp": 80,
    "turns": 23,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "8dcdf32804193c3da2513a5a2b8ca666692db022",
    "outcome": "win",
    "playerHp": 274,
    "playerMp": 80,
    "turns": 46,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "c1cacb3185bead5d824ac8e568d84e3ff6c707fd",
    "outcome": "win",
    "playerHp": 388,
    "playerMp": 80,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "4f9519b2b27194ea9c86ebf241846f32f2cc221c",
    "outcome": "win",
    "playerHp": 115,
    "playerMp": 354,
    "turns": 65,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "35f252bb941770ff5109b199472b05ef91f444c1",
    "outcome": "win",
    "playerHp": 286,
    "playerMp": 80,
    "turns": 543,
  },
  {
    "enemyHp": 214,
    "label": "heal_vs_들소_boss",
    "logSha": "3b4efa9bb8e5d980dc095f3da2a882e0f14da26a",
    "outcome": "lose",
    "playerHp": 550,
    "playerMp": 80,
    "turns": 257,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "b7c1c623adf44f3aa74dc620b8416d054b32631f",
    "outcome": "win",
    "playerHp": 395,
    "playerMp": 316,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "30c90a8c65db8f69709984f4e5bb16f7840a3fa2",
    "outcome": "win",
    "playerHp": 168,
    "playerMp": 80,
    "turns": 27,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "04b708d5dd3e7508bcaf0c068d88923ac1dbe0b6",
    "outcome": "p1_win",
    "turns": 59,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "36b7066937b0f950ae595ece547cefbb469f8e78",
    "outcome": "p1_win",
    "turns": 33,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "8d2d5d530d42e2f50639d9cea021201c82d48a69",
    "outcome": "p2_win",
    "turns": 222,
  },
]
`;
